--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,5 +1,6 @@
 @import "~@advanced/mosaic-styles/css/mosaic.css";
 @import "~bootstrap-vue/dist/bootstrap-vue.css";
+@import "animate.css";
 
 html,
 body,
