--- a/client/src/components/details/details.html
+++ b/client/src/components/details/details.html
@@ -1,11 +1,99 @@
-<b-container class="container-fluid">
-  <div class="card">
-    <h5 class="card-header">{{user.firstName}} {{user.lastName}}</h5>
-    <div class="card-body">
-      <p class="card-text">First Name: {{user.firstName}}</p>
-      <p class="card-text">Last Name: {{user.lastName}}</p>
-      <p class="card-text">Age: {{user.age}}</p>
-      <p class="card-text">Email: {{user.email}}</p>
-    </div>
-  </div>
+<b-container>
+  <b-row>
+    <b-col cols="8">
+      <div class="card">
+        <h5 class="card-header">
+          <table class="table-users table" border="0">
+            <tbody>
+              <tr>
+                <td width="10" align="center">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M20.822 18.096c-3.439-.794-6.641-1.49-5.09-4.418 4.719-8.912 1.251-13.678-3.732-13.678-5.081 0-8.464 4.949-3.732 13.678 1.597 2.945-1.725 3.641-5.09 4.418-2.979.688-3.178 2.143-3.178 4.663l.005 1.241h10.483l.704-3h1.615l.704 3h10.483l.005-1.241c.001-2.52-.198-3.975-3.177-4.663zm-8.231 1.904h-1.164l-.91-2h2.994l-.92 2z" /></svg>
+                </td>
+                <td align="left">
+                  <b>{{user.firstName}} {{user.lastName}}</b>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </h5>
+        <div class="card-body">
+          <table class="table-users table" border="0">
+            <tbody>
+              <tr>
+                <td align="left">
+                  <p class="card-text">First Name</p>
+                </td>
+                <td align="center" width="5px">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text">{{user.firstName}}</p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">Last Name</p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text">{{user.lastName}}</p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">Email</p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text">{{user.email}}</p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">Age</p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text">{{user.age}}</p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">DOJ</p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text">
+                    <datepicker :value="user.doj" input-class="datepickerwhendinlist" disabled format="dd-MM-yyyy"></datepicker>
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-body">
+          <b>
+            <button class="btn btn-primary float-left" role="button" v-on:click="gotoHome(user._id)">Home</Button>
+            <!-- <a class="btn btn-primary float-left" href="#" role="button" v-bind:href="'/'">Home</a>  -->
+          </b>
+          <b>
+            <a class="btn btn-primary float-right" href="#" role="button" v-if="!isEditable()" v-bind:href="'/edit/'+ user._id">Edit</a>
+            <!-- <button class="btn btn-primary float-right" role="button" v-bind:disabled="isEditable"
+              v-on:click="gotoEdit(user._id)">Edit</Button> -->
+          </b>
+        </div>
+      </div>
+    </b-col>
+    <b-col>
+    </b-col>
+  </b-row>
 </b-container>
