--- a/client/src/components/edit/edit.html
+++ b/client/src/components/edit/edit.html
@@ -1,43 +1,120 @@
-<b-container class="container-fluid">
-  <form v-bind:style="{'margin-top': '20px'}">
-    <div class="form-group row">
-      <label for="firstname" class="col-sm-2 col-form-label">First Name</label>
-      <div class="col-sm-10">
+<b-container>
+  <b-row>
 
-        <input type="text" class="form-control" id="firstname" v-model="user.firstName" placeholder="First Name">
+    <b-col cols="8">
+      <div class="card">
+        <h5 class="card-header">
+          <table class="table-users table" border="0">
+            <tbody>
+              <tr>
+                <td width="10" align="center">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M20.822 18.096c-3.439-.794-6.641-1.49-5.09-4.418 4.719-8.912 1.251-13.678-3.732-13.678-5.081 0-8.464 4.949-3.732 13.678 1.597 2.945-1.725 3.641-5.09 4.418-2.979.688-3.178 2.143-3.178 4.663l.005 1.241h10.483l.704-3h1.615l.704 3h10.483l.005-1.241c.001-2.52-.198-3.975-3.177-4.663zm-8.231 1.904h-1.164l-.91-2h2.994l-.92 2z" /></svg>
+                </td>
+                <td align="left">
+                  <b>{{user.firstName}} {{user.lastName}}</b>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </h5>
+        <div class="card-body">
+          <table class="table-users table" border="0">
+            <tbody>
+              <tr>
+                <td align="left">
+                  <p class="card-text">First Name</p>
+                </td>
+                <td align="center" width="5px">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text" v-bind:class="{'redborder': IsFieldContainError('firstName') }"><input type="text"
+                      class="form-control" id="firstname" v-model="user.firstName" placeholder="First Name"></p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">Last Name </p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text" v-bind:class="{'redborder': IsFieldContainError('lastName') }"><input type="text"
+                      class="form-control" id="lastname" v-model="user.lastName" placeholder="Last Name"></p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">Email</p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text" v-bind:class="{'redborder': IsFieldContainError('email') }"><input type="email"
+                      class="form-control" id="email" v-model="user.email" placeholder="Email"></p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">Age</p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text" v-bind:class="{'redborder': IsFieldContainError('age') }"> <input type="number"
+                      class="form-control" id="age" v-model="user.age" placeholder="Age"></p>
+                </td>
+              </tr>
+              <tr>
+                <td align="left">
+                  <p class="card-text">DOJ</p>
+                </td>
+                <td align="center">
+                  :
+                </td>
+                <td align="left">
+                  <p class="card-text" v-bind:class="{'redborder': IsFieldContainError('doj') }">
+                    <datepicker input-class="form-control removereadonlybg" format="dd-MM-yyyy" v-model="user.doj"
+                      placeholder="DOJ"></datepicker>
+                  </p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-body">
+          <b>
+            <!-- <a class="btn btn-primary float-left" href="#" role="button" v-bind:href="'/'">Home</a> -->
+            <button class="btn btn-primary float-left" role="button" v-on:click="gotoHome()">Home</Button>
+          </b>
+          <b class=" float-right"> <button type="button" @click="showModal('Save')" class="btn btn-primary"
+              v-bind:disabled="!isDataChanged">Save</button>
+            <button type="button" @click="showModal('Cancel')" class="btn btn-primary">Cancel</button> </b>
+
+        </div>
       </div>
-    </div>
-    <div class="form-group row">
-      <label for="lastname" class="col-sm-2 col-form-label">Last Name</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="lastname" v-model="user.lastName" placeholder="Last Name">
+    </b-col>
+    <b-col>
+      <div v-for="(error, index) in errorsReturnByServer" :key="index">
+
+        <b-alert variant="danger" show fade>
+          {{error.message}}
+        </b-alert>
+
       </div>
-    </div>
-    <div class="form-group row">
-      <label for="email" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" v-model="user.email" placeholder="Email">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="age" class="col-sm-2 col-form-label">Age</label>
-      <div class="col-sm-10">
-        <input type="number" class="form-control" id="age" v-model="user.age" placeholder="Age">
-      </div>
-    </div>
-    <div class="form-group row">
-      <div class="col-sm-10">
-        <button type="button" @click="showModal" class="btn btn-primary">Save</button>
-      </div>
-    </div>
-  </form>
+      <b-alert variant="success" dismissible :show="success" @dismissed="success=false">
+        Saved successfully
+    </b-col>
+  </b-row>
+
+  <!-- Save Modal -->
   <div>
-    <!-- <b-btn v-b-modal.modal1>Launch demo modal</b-btn> -->
-
-    <!-- Modal Component -->
-    <b-modal ref="saveModal" id="modal1" title="Save" @ok="handleOk" @cancel="handleCancel">
-      <p class="my-4">Are you sure, you want to save?.</p>
+    <b-modal ref="saveModal" transition id="modal1" :title="modalHeaderTitle" @show="show" @ok="handleOk" @hide="hide">
+      <p class="my-4">{{modalBodyText}}</p>
     </b-modal>
   </div>
-
 </b-container>
