--- a/client/src/components/edit/edit.html
+++ b/client/src/components/edit/edit.html
@@ -108,6 +108,7 @@
       </div>
       <b-alert variant="success" dismissible :show="success" @dismissed="success=false">
         Saved successfully
+      </b-alert>
     </b-col>
   </b-row>
 
